fix horizontal scroll issue

--- a/pages/index.css
+++ b/pages/index.css
@@ -7,8 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
 }
 
 code {
